--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ vagrant/*.log
 /magento/pub/media/magestore/
 /magento/pub/media/stamps/
 
+/web/node_modules/*
+/backend/node_modules/*
+
 ### Linux ###
 *~
 
