--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,11 @@ vagrant/*.log
 
 /web/node_modules/*
 /backend/node_modules/*
+/mobile/node_modules/*
 
 *web/node_modules/*
+*backend/node_modules/*
+*mobile/node_modules/*
 
 
 ### Linux ###
